# HDRShadertoy

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
data/shaders/: AlienBooger.comp  ChocolatePackage.comp  ChromaticResonance.comp  CorridorTravel.comp  DiamondsAndDiagonals.comp  DriveHome.comp  Echeveria.comp  EnergyPlant.comp  Ether.comp  FluxCore.comp  Fractal41.comp  Galvanize.comp  Geometry306.comp  Glitch.comp  Heeelix.comp  Hyperkart.comp  InsideMandelbulb.comp  InsideMandelbulbII.comp  InsideSphereI.comp  KIFSFlythrough.comp  MandelbulbI.comp  MarsTerrain.comp  MoreFractalRopes.comp  MorphingAbstract.comp  PBRMandelbulb.comp  Plasma.comp  ProteanClouds.comp  QuasiInfiniteZoomVoronoid.comp  RainbowSpaghetti.comp  RainbowTwister.comp  RedLandscape.comp  RemnantX.comp  SculptureII.comp  ServerRoom.comp  Spaceship.comp  StarNest.comp  SwirlPortal.comp  TrippyTriangle.comp  TwinklingTunnel.comp  VolumetricGI.comp  (+1 more)
shaders/: ChromaticResonance.comp  CorridorTravel.comp  DiamondsAndDiagonals.comp  Ether.comp  Glitch.comp  Heeelix.comp  Hyperkart.comp  KIFSFlythrough.comp  QuasiInfiniteZoomVoronoid.comp  RainbowTwister.comp  RemnantX.comp  SculptureII.comp  ServerRoom.comp  Spaceship.comp  SwirlPortal.comp  TrippyTriangle.comp  ZippyZaps.comp
source/: shadertoy.cpp
